Refactor out sapper recharge time from exploding sapper

--- a/configs/customweapons/subjugated_saboteur.cfg
+++ b/configs/customweapons/subjugated_saboteur.cfg
@@ -27,5 +27,10 @@
 			"plugin"	"custom-attribute-adapter/attr_sapper_reprograms_buildings"
 			"value"		"sap_time=5.0 self_destruct_time=15.0"
 		}
+		"sapper recharge time"
+		{
+			"plugin"	"custom-attribute-adapter/attr_sapper_recharge_time"
+			"value"		"10.0"
+		}
 	}
 }
