Split buff handler into subplugins

--- a/configs/customweapons/merasmus_stash.cfg
+++ b/configs/customweapons/merasmus_stash.cfg
@@ -28,7 +28,7 @@
 		{
 			// implements custom buff type
 			"plugin"	"custom-attribute-adapter/attr_buff_override"
-			"value"		"666"
+			"value"		"crit-banner"
 		}
 		
 		// note: custom weapons doesn't have any way to preserve attributes so you'll have to have a banner equipped to see the meter
