Convert spy smokeout to buff override

--- a/configs/customweapons/essendon_eliminator.cfg
+++ b/configs/customweapons/essendon_eliminator.cfg
@@ -12,10 +12,10 @@
 	"description"	"<description>"
 	"cw3_attributes"
 	{
-		"rage smokes out spies"
+		"custom buff type"
 		{
-			"plugin"	"custom-attribute-adapter/attr_sniper_rage_smokeout_spies"
-			"value"		"1"
+			"plugin"	"custom-attribute-adapter/attr_buff_override"
+			"value"		"spy smokeout"
 		}
 		"rage on headshot"
 		{
