Add text HUD and refill sound

--- a/configs/customweapons/plastic_pisstol.cfg
+++ b/configs/customweapons/plastic_pisstol.cfg
@@ -60,5 +60,10 @@
 			"plugin"	"custom-attribute-adapter/full_clip_refill_after_time"
 			"value"		"30.0"
 		}
+		"full clip refill after time progress display"
+		{
+			"plugin"	"custom-attribute-adapter/full_clip_refill_after_time"
+			"value"		"Piss"
+		}
 	}
 }
