--- a/configs/customweapons/magnum_opus.cfg
+++ b/configs/customweapons/magnum_opus.cfg
@@ -18,6 +18,11 @@
 			"plugin"	"custom-attribute-adapter/mod_crit_type_on_hitgroup"
 			"value"		"hitgroup=1 crit_type=2"
 		}
+		"alt fire throws cleaver"
+		{
+			"plugin"	"custom-attribute-adapter/alt_fire_throws_cleaver"
+			"value"		"velocity=3000.0"
+		}
 		"damage bonus"
 		{
 			"plugin"	"tf2attributes"
