Add 'generate rage on damage patch'
Gotta work around some of the additional features Valve added to that attribute.  Too bad there's nothing that just enables rage.

--- a/configs/customweapons/talos.cfg
+++ b/configs/customweapons/talos.cfg
@@ -37,5 +37,11 @@
 			// shoot 30% faster and use up 3 ammo per shot
 			"value"		"mult_postfiredelay=0.7 ammo_per_shot=3"
 		}
+		"generate rage on damage patch"
+		{
+			// a bunch of workarounds to prevent the rage-based side effects of enabling "generate rage on damage"
+			"plugin"	"custom-attribute-adapter/generate_rage_on_dmg_patch"
+			"value"		"disable_knockback=1 disable_rage_on_damage=1 disable_rage_damage_penalty=1"
+		}
 	}
 }
