Add post-boost fire rate penalty and boost bullet spread bonus

--- a/configs/customweapons/talos.cfg
+++ b/configs/customweapons/talos.cfg
@@ -34,8 +34,8 @@
 		{
 			"plugin"	"custom-attribute-adapter/minigun_burst_shot_rage"
 			
-			// shoot 30% faster and use up 3 ammo per shot
-			"value"		"mult_postfiredelay=0.7 ammo_per_shot=3"
+			// shoot 30% faster and use up 3 ammo per shot, 50% more accurate, 100% slower after boost for 5 seconds
+			"value"		"mult_postfiredelay=0.7 ammo_per_shot=3 mult_spread=0.5 fire_delay_recharge=2.0 recharge_period=5"
 		}
 		"generate rage on damage patch"
 		{
