minigun rage shield: Add option to redeploy while draining

--- a/configs/customweapons/chudakov.cfg
+++ b/configs/customweapons/chudakov.cfg
@@ -38,8 +38,10 @@
 		{
 			// level: 1 or 2 for small or large shield
 			// min_rage: 0.0 to 1.0 based on required rage to deploy
+			// rage_cancelable: 1 to cancel rage draining on spindown
+			// rage_redeployable: 1 to allow shield creation if rage is draining
 			"plugin"	"custom-attribute-adapter/minigun_rage_projectile_shield"
-			"value"		"level=1 min_rage=1 rage_cancelable=0"
+			"value"		"level=1 min_rage=1 rage_cancelable=0 rage_redeployable=1"
 		}
 		"rage fill multiplier"
 		{
