Add smlib suitable for 1.9+ compilers
This change lands a copy of smlib and rewrites a few existing plugins that used functionality from that library.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "third_party/submodules/stocksoup"]
 	path = third_party/submodules/stocksoup
 	url = https://github.com/nosoop/stocksoup
+[submodule "third_party/submodules/smlib"]
+	path = third_party/submodules/smlib
+	url = https://github.com/bcserv/smlib.git
