Remove redundant 'mod crit type vs disguised players' attribute
We have 'mod crit type on target condition', which does basically
the same thing.

--- a/configs/customweapons/councilman.cfg
+++ b/configs/customweapons/councilman.cfg
@@ -13,11 +13,11 @@
 	"description"	"<description>"
 	"cw3_attributes"
 	{
-		"mod crit type vs disguised players"
+		"mod crit type on target condition"
 		{
 			// 1 for mini-crit, 2 for full crit
-			"plugin"	"custom-attribute-adapter/mod_crit_type_vs_disguised_players"
-			"value"		"1"
+			"plugin"	"custom-attribute-adapter/mod_crit_type_vs_condition"
+			"value"		"condition=3 crit_type=1"
 		}
 		"mod crit type vs sentry targets"
 		{
