Remove 'mult energy ring speed'
This is handled by the attribute support plugin these days.

--- a/configs/customweapons/wunderwaffe.cfg
+++ b/configs/customweapons/wunderwaffe.cfg
@@ -25,12 +25,10 @@
 			"plugin"	"custom-attribute-adapter/energy_ring_impact_effect"
 			"value"		"radius=300 amplitude=10 frequency=10 duration=0.5"
 		}
-		"mult energy ring speed"
+		"Projectile speed increased"
 		{
-			// modifies speed of pomson (and bison?) projectile
-			// multipliers past 3.0 have velocities that may be clamped by the game
-			// and cause projectiles to go in unexpected directions
-			"plugin"	"custom-attribute-adapter/energy_ring_speed_mult"
+			// this requires https://github.com/nosoop/SM-TFAttributeSupport
+			"plugin"	"tf2attributes"
 			"value"		"3.0"
 		}
 		
