configs: Move 'demo charge low gravity' to CW2 section

--- a/configs/customweapons/air_lock.cfg
+++ b/configs/customweapons/air_lock.cfg
@@ -10,7 +10,7 @@
 	"quality"		"6"
 	"logname"		"airlock"
 	"description"	"(description)"
-	"cw3_attributes"
+	"attributes"
 	{
 		"demo charge low gravity"
 		{
