--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-      with: submodules: true
+      with:
+        submodules: true
 
     - name: Setup SourcePawn Compiler
       uses: rumblefrog/setup-sp@master
