--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,16 +1,12 @@
 name: Build Workflow
 
-# on: [push]
-on:
-  push:
-    # Sequence of patterns matched against refs/tags
-    tags:
-    - 'r*'
+on: [ push ]
 
 jobs:
   run:
     name: Run action
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
+    if: "!contains(github.event.head_commit.message, '[ci skip]')"
 
     steps:
     - uses: actions/checkout@v1
@@ -22,39 +18,45 @@ jobs:
       with:
         version: "1.10.x"
 
-    - name: Setup ninja-build
+    - name: Setup Ninja Build
       uses: ashutoshvarma/setup-ninja@master
       with:
         version: 1.10.0
 
-    - name: Build project
+    - name: Build Files
       run: |
         python3 configure.py
         ninja
 
-    - name: Build package
-      # this should be part of the build?
+    - name: Build Package
+      # the package generation should probably be part of the ninja script itself
       run: |
         pushd build
         7za a -r package.zip configs/ scripting/ plugins/ gamedata/
         popd
+
+    - name: Set commit hash
+      id: vars
+      run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        tag_name: workflow-build${{ github.run_number }}
+        release_name: Build ${{ steps.vars.outputs.sha_short  }}
         draft: false
         prerelease: false
+
     - name: Upload Release Asset
-      id: upload-release-asset 
+      id: upload-release-asset
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./build/package.zip
         asset_name: package.zip
         asset_content_type: application/zip
