--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,9 @@
 name: Build Workflow
 
-on: [ push ]
+on:
+  push:
+    branches:
+      - master
 
 jobs:
   run:
@@ -32,7 +35,7 @@ jobs:
       # the package generation should probably be part of the ninja script itself
       run: |
         pushd build
-        7za a -r package.zip configs/ scripting/ plugins/ gamedata/
+        7za a -r package.zip scripting/ plugins/ gamedata/
         popd
 
     - name: Set commit hash
