--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         submodules: true
 
     - name: Setup SourcePawn Compiler
-      uses: rumblefrog/setup-sp@master
+      uses: rumblefrog/setup-sp@v1.1.0
       with:
         version: "1.10.x"
 
